Express server up running on port 5000

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Simple calculator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/andersrochester/calculator-two/issues"
   },
-  "homepage": "https://github.com/andersrochester/calculator-two#readme"
+  "homepage": "https://github.com/andersrochester/calculator-two#readme",
+  "dependencies": {
+    "express": "^4.15.4"
+  }
 }
